--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@ body { background:var(--void); color:var(--star-white); font-family:'Exo 2',sans
 .login-btn { width:100%; padding:0.85rem; margin-top:0.8rem; font-family:'Space Mono',monospace; font-size:0.7rem; font-weight:700; letter-spacing:4px; text-transform:uppercase; background:rgba(255,255,255,0.06); color:rgba(255,255,255,0.7); border:1px solid rgba(255,255,255,0.12); cursor:pointer; transition:all 0.3s ease; }
 .login-btn:hover { background:rgba(255,255,255,0.1); border-color:rgba(255,255,255,0.25); color:rgba(255,255,255,0.9); }
 @keyframes shake{0%,100%{transform:translateX(0)}15%{transform:translateX(-8px)}30%{transform:translateX(8px)}45%{transform:translateX(-5px)}60%{transform:translateX(5px)}75%{transform:translateX(-2px)}90%{transform:translateX(2px)}}
+@keyframes neonFlash{0%{opacity:0;transform:scale(0.6);text-shadow:0 0 0 transparent;filter:blur(2px)}15%{opacity:1;transform:scale(1.3);text-shadow:0 0 12px rgba(0,230,118,0.9),0 0 30px rgba(0,230,118,0.5),0 0 60px rgba(0,230,118,0.2);filter:blur(0)}30%{transform:scale(1.05);text-shadow:0 0 8px rgba(0,230,118,0.7),0 0 20px rgba(0,230,118,0.3)}50%{transform:scale(1);text-shadow:0 0 6px rgba(0,230,118,0.5),0 0 15px rgba(0,230,118,0.2)}100%{opacity:0;transform:scale(0.95);text-shadow:0 0 0 transparent}}
+@keyframes neonFlashFail{0%{opacity:0;transform:scale(0.6);text-shadow:0 0 0 transparent;filter:blur(2px)}15%{opacity:1;transform:scale(1.3);text-shadow:0 0 12px rgba(255,68,68,0.9),0 0 30px rgba(255,68,68,0.5),0 0 60px rgba(255,68,68,0.2);filter:blur(0)}30%{transform:scale(1.05);text-shadow:0 0 8px rgba(255,68,68,0.7),0 0 20px rgba(255,68,68,0.3)}50%{transform:scale(1);text-shadow:0 0 6px rgba(255,68,68,0.5),0 0 15px rgba(255,68,68,0.2)}100%{opacity:0;transform:scale(0.95);text-shadow:0 0 0 transparent}}
 .login-btn.docking { animation:crtDockPulse 0.8s ease infinite; }
 .login-divider { display:flex; align-items:center; gap:1rem; margin:1.2rem 0; }
 .login-divider::before,.login-divider::after { content:''; flex:1; height:1px; background:rgba(255,255,255,0.05); }
@@ -5529,15 +5531,17 @@ async function idlabSaveProfile() {
     if (error) throw error;
     // Success feedback
     btn.textContent = '[ Saved ✓ ]';
-    status.textContent = 'PROFILE SYNCED'; status.style.opacity = '1';
-    setTimeout(() => { btn.textContent = 'Save Profile'; btn.disabled = false; status.style.opacity = '0'; }, 2000);
+    status.textContent = 'PROFILE SYNCED'; status.style.color='rgba(0,230,118,0.9)';
+    status.style.animation='none'; void status.offsetWidth; status.style.animation='neonFlash 2s ease forwards';
+    setTimeout(() => { btn.textContent = 'Save Profile'; btn.disabled = false; }, 2000);
     // Update preview live
     idlabUpdatePreview(updates);
   } catch (e) {
     console.error('Save error:', e);
     btn.textContent = 'Save Profile'; btn.disabled = false;
-    status.textContent = 'SYS: SAVE FAILED'; status.style.color = '#ff4444'; status.style.opacity = '1';
-    setTimeout(() => { status.style.opacity = '0'; status.style.color = 'rgba(0,230,118,0.7)'; }, 3000);
+    status.textContent = 'SYS: SAVE FAILED'; status.style.color = '#ff4444';
+    status.style.animation='none'; void status.offsetWidth; status.style.animation='neonFlashFail 3s ease forwards';
+    setTimeout(() => { status.style.color = 'rgba(0,230,118,0.7)'; }, 3000);
   }
 }
 
